objects/tffa__DepositBoxConfiguration__c.object
<CustomObject>
    <description>A safe deposit box is a secured container—usually a metal box—that stays in the safe or vault of a federally insured bank or credit union. Safe deposit boxes are used to keep valuables, important documents for the individual. This object captures the deposit box configurations.</description>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Unique code of brands servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>Allowed channels for the Deposit Box. A fact.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Broad classification of the product</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The primary product</description>
        <label>Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Deposit Box Configurations</relationshipLabel>
        <relationshipName>DepositBoxConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deposit Box Configuration</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DepositBoxConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Box Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>